# codingame_python

./: Makefile  pyproject.toml  setup.cfg
code_royale/bronze/: first_wave.py
code_royale/wood_1_league/: test_first_wave.txt
codingame/: conftest.py  utils.py
codingame/code_of_the_rings/: code_of_the_rings.py  entire_alphabet_memory.txt  long_spell_static.txt  run_code_of_the_rings.py  sample1_static.txt  samples.txt  short_spell_static.txt  test_code_of_the_rings.py  test_run_code_of_the_rings.py
codingame/code_royale/bronze/: first_wave.py
codingame/code_royale/wood_3_league/: first_wave.py  test_first_wave.txt  test_league.txt  test_want_to_build.txt
codingame/counting_cards/: easily_distracted.py  easily_distracted_dict.py  test_easily_distracted.py
codingame/dwarfs_on_giants/: dwarfs_on_giants.py  test_dwarfs_on_giants.py
codingame/ghost_legs/: ghost_legs.py
codingame/logic_gates/: logic_gates.py
codingame/mars_lander/: mars_lander_1.py  mars_lander_2.py
codingame/rectangle_partition/: rectangle_partition.py  test_rectangle_partition.py
