[tool.poetry]
name = "codingame"
version = "0.1.0"
description = "Exercises from https://www.codingame.com"
authors = ["Thomas Richard <thomrich0@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"

[tool.poetry.dev-dependencies]
pytest = "*"
flake8 = "*"
flake8-isort = "*"

[tool.poetry.scripts]
code-of-the-rings = "codingame.code_of_the_rings.run_code_of_the_rings:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
